# OA_Server_Manager

./: .env  CLAUDE.md  main.py  pyproject.toml  tui_main.py  tui_obs_test.py
core/adapters/: base.py  registry.py  status_parser.py
core/adapters/amp/: __init__.py  adapter.py  amp_api_client.py  message_processor.py  status_parser.py
core/adapters/openarena/: adapter.py  message_processor.py  status_parser.py
core/game/: game_manager.py  state_manager.py
core/network/: network_manager.py  network_utils.py
core/obs/: connection_manager.py  controller.py  manager.py
core/server/: server.py  shutdown_strategies.py
core/utils/: display_utils.py  settings.py
tests/: README.md  conftest.py
tests/core/adapters/: test_adapter_contract.py  test_message_processor.py  test_message_type.py  test_status_parser.py  test_sync_async_pattern.py
tests/core/adapters/amp/: test_adapter.py  test_message_processor.py  test_status_parser.py
tests/core/adapters/openarena/: test_adapter.py
tests/core/game/: test_state_manager.py
tests/core/network/: test_network_utils.py
tests/core/obs/: test_connection_manager_protocol.py
tests/core/server/: test_server_removed.py
tests/core/utils/: test_display_utils_protocol.py
tests/integration/: test_amp_api.py  test_amp_console_stream.py  test_amp_rcon_command.py  test_obs_connection.py  test_obs_manual.py
tests/tui/: test_tui_main.py  test_tui_no_branching.py
