[project]
name = "oa-server"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "dotenv>=0.9.9",
    "websockets>=12.0",
    "tabulate>=0.9.0",
    "textual>=6.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/integration"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
